--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon --watch \"./src/**\" ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,7 @@
     "@types/express": "4.17.13",
     "@types/jsonwebtoken": "8.5.6",
     "@types/mocha": "9.1.0",
-    "@types/node": "16.11.7",
+    "@types/node": "16.11",
     "@types/sequelize": "4.28.10",
     "@types/sinon": "10.0.11",
     "@types/validator": "13.6.6",
@@ -39,8 +39,8 @@
     "sequelize-cli": "6.3.0",
     "sinon": "13.0.1",
     "ts-node": "10.7.0",
-    "ts-node-dev": "1.1.8",
-    "typescript": "4.4.4"
+    "ts-node-dev": "1.1",
+    "typescript": "4.4"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
@@ -53,4 +53,3 @@
     "sequelize": "6.25.5"
   }
 }
-
