--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -1,7 +1,7 @@
-JWT_SECRET=jwt_secret
-PORT=3001
-DB_USER=seu_user
-DB_PASS=sua_senha
-DB_HOST=localhost 
-DB_PORT=3306
+JWT_SECRET=
+PORT=
+DB_USER=
+DB_PASS=
+DB_HOST= 
+DB_PORT=
 
