--- a/app/backend/.eslintrc.json
+++ b/app/backend/.eslintrc.json
@@ -23,6 +23,12 @@
     "sonarjs",
     "mocha"
   ],
+  "eslint.workingDirectories": [
+      "./part_b",
+      "./part_c_patientor/frontend",
+      "./part_c_patientor/backend",
+      "./part_d"
+    ],
   "rules": {
     "no-underscore-dangle": "off",
     "no-console": "off",
