--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -5,7 +5,8 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch \"./src/**\" ./src/server.ts"
+    "dev": "nodemon --watch \"./src/**\" ./src/server.ts",
+    "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
